Added platform specific lines for Wezterm fonts.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,7 @@
 [safe]
 	directory = /media/storage/projects/JSTG
 	directory = /media/storage/school/W24/3190_cis/a1
+	directory = /media/storage/school/W24/3190_cis/a2
 [init]
 	defaultBranch = main
 [pager]
