--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Auto install TPM if not installed.
 if "test ! -d ~/.tmux/plugins/tpm" \
