--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-f # main key Ctrl - f
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 set -g mouse on
+set-option -a terminal-features 'screen-256color:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
