--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,10 @@ set -s escape-time 0
 set -g mouse on
 set-option -a terminal-features 'screen-256color:RGB'
 
+# Pane splits should open to the same path as the current pane
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
